fix: mobile design and dark mode only

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,11 @@
 html,
 body,
 #__next {
-  @apply bg-white dark:bg-black text-black dark:text-white font-coiny w-full h-full;
+  @apply bg-black text-white font-coiny w-full;
+}
+
+#__next {
+  @apply max-w-xl mx-auto border border-primary;
 }
 
 @font-face {
@@ -35,7 +39,7 @@ a:hover {
 }
 
 main {
-  @apply p-5 bg-white dark:bg-black text-black dark:text-white;
+  @apply p-5 bg-black text-white;
 }
 
 section {
